# exquisite-content-factory

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: content_formats.json  pilot_topics.json  trend_library.csv
docs/: API_TOOLING_MAP.md  AUTOMATION_PLAN.md  CONTENT_SYSTEM.md  WEBSITE_UTILITY_STORIES.md  WEB_LORE.md  WORLD_BIBLE.md
lore/00-start-here/: README.md
lore/01-story-bible/: STORY_BIBLE.md
lore/02-characters/: agents-and-curators.md  kamau.md  lucia.md  noura.md
lore/03-world/: locations.md  rituals.md
lore/04-timeline/: ten-year-arc.md
lore/05-episodes/: episode-formats.md
lore/06-style-guides/: visual-language.md  voice-and-tone.md
lore/07-website-data/: exquisite-world.json
lore/08-canon-registry/: canon-log.md
prompts/: caption_style.md  image_prompt.md  script_generation.md
schemas/: exquisite-world.schema.json
scripts/: generate_daily_queue.py
src/exquisite_content_factory/: cli.py  generator.py
src/exquisite_content_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: README.md
